    of "gwb2ged" (see below in section "GeneWeb to Gedcom").
  - [Jul 2, 99] Fixed bug: importing GeneWeb base from old version passing
    by a GEDCOM file did not work if the current directory held spaces.
  - [Jul 2, 99] Changed names of html files to hold 8 characters maximum
    and 3 characters for the extension, to be unzippable by "pkunzip".

* GeneWeb Daemon/CGI (gwd)
  - [Aug 2, 99] In relationship displaying, can make the difference in
    the lexicon between father's and mother's side (used in Swedish, where
    there are different words for "uncle", "aunt", "great-uncle" and
    "great-aunt" depending on they are on father's or mother's side).
  - [Aug 1, 99] Added relationships computing by marriage.
  - [Jul 28, 99] In "cousins" pages, added link to uncles and aunts, nephews
    and nieces.
  - [Jul 26..28, 99] Added other relations: godparents, adoptive parents,
    recognizing parents, candidate parents.
  - [Jul 22, 99] In relationship branches displaying, when the spouses are
    displayed, display also the marriage date.
  - [Jul 20, 99] In the titles displaying, sort preferably the persons by
    the nth rank (e.g. "nth duke of ...") when existing.
  - [Jul 19, 99] Fixed bug in descendants by list: displaying was incorrect
    when several marriages and one of them with an unknown ("? ?") person.
  - [Jul 18, 99] When updating families, the "sources" field is propagated
    into the created persons.
  - [Jul 18, 99] Fixed small bug for the access by subparts of surnames
    (it sometimes accepted too small subparts: then the "search" could
    give weird results).
  - [Jul 17, 99] In welcome page, now search by surname when search by
    full name fails (no need to select "surname"). Idem in relationship
    computing.
  - [Jul 17, 99] Fixed bug: could not access person after having changed his
    name, in some circumstances, e.g. changing the surname "L'epine" (in
    two words) into "Lepine" (one word).