@@ -23,6 +23,10 @@ GeneWeb version 2.05
     and 3 characters for the extension, to be unzippable by "pkunzip".
 
 * GeneWeb Daemon/CGI (gwd)
+  - [Aug 3, 99] Added ancestor displaying (and navigating) by tree.
+  - [Aug 3, 99] In relationship by branches, improved displaying: now
+    the horizontal bars are always correctly aligned relative to the
+    vertical bars (at least with Netscape).
   - [Aug 2, 99] In relationship displaying, can make the difference in
     the lexicon between father's and mother's side (used in Swedish, where
     there are different words for "uncle", "aunt", "great-uncle" and
